# football-api

./: README.md  docker-compose.yaml  heroku.yml  pyproject.toml  requirements.txt
football_api/: settings.py  urls.py
football_api_app/: models.py
football_api_app/migrations/: 0003_auto_20210729_1611.py
